feat: updated README file and better console report